GNOME Bugzilla – Bug 754682
user-accounts: Avoid a crash when gdm's schemas aren't installed
Last modified: 2015-09-07 14:47:38 UTC
Commit de821d592294de94659b316792a1395fd08352bb implicitly added a runtime dependency on gdm's settings schemas being installed. Since GSettings aborts if schemas aren't installed this means we new crash on systems without gdm. See https://bugzilla.redhat.com/show_bug.cgi?id=1259935 .
Created attachment 310825 [details] [review] user-accounts: Avoid a crash when gdm's schemas aren't installed
Review of attachment 310825 [details] [review]: Yep.
Attachment 310825 [details] pushed as 958c014 - user-accounts: Avoid a crash when gdm's schemas aren't installed