user-accounts: Avoid a crash when gdm's schemas aren't installed

Commit de821d592294de94659b316792a1395fd08352bb implicitly added a
runtime dependency on gdm's settings schemas being installed. Since
GSettings aborts if schemas aren't installed this means we new crash
on systems without gdm.

See https://bugzilla.redhat.com/show_bug.cgi?id=1259935 .

https://bugzilla.gnome.org/show_bug.cgi?id=754682